# new_formation_ws

./: README.md
devel/: .catkin  _setup_util.py  local_setup.sh
devel/include/quadrotor_msgs/: PositionCommand.h
devel/lib/assign_goals/: assign_goals_node
devel/lib/load_pcd/: airsimmap_node  generatemap_node  load_pcd_node  test_node
devel/lib/local_sensing_node/: pcl_render_node
devel/lib/manual_take_over/: manual_take_over  manual_take_over_station
devel/lib/odom_visualization/: odom_visualization
devel/lib/pkgconfig/: assign_goals.pc  drone_detect.pc  ego_planner.pc  load_pcd.pc  local_sensing_node.pc  manual_take_over.pc  map_generator.pc  mockamap.pc  moving_obstacles.pc  msg_socket_bridge.pc  odom_visualization.pc  path_searching.pc  plan_env.pc  poscmd_2_odom.pc  pose_utils.pc  quadrotor_msgs.pc  random_goals.pc  rviz_plugins.pc  selected_points_publisher.pc  so3_control.pc  so3_quadrotor_simulator.pc  swarm_bridge.pc  traj_opt.pc  traj_utils.pc  uav_utils.pc
devel/lib/poscmd_2_odom/: poscmd_2_odom
devel/lib/random_goals/: random_goals_node
devel/lib/so3_control/: control_example
devel/lib/so3_quadrotor_simulator/: quadrotor_simulator_so3
src/msg_socket_bridge/: CMakeLists.txt  README.md
src/msg_socket_bridge/launch/: bridge.launch
src/msg_socket_bridge/src/: bridge_node.cpp
src/planner/car_msgs/: CMakeLists.txt  package.xml
src/planner/car_msgs/msg/: Header.msg  Point2f.msg  Trajectory.msg  TrajectoryPoint.msg
src/planner/plan_manage/: CMakeLists.txt  package.xml
src/uav_simulator/load_pcd/: CMakeLists.txt  package.xml
(+62 files in other folders)
